--- a/src/public/views/user/templates/register.view.client.html
+++ b/src/public/views/user/templates/register.view.client.html
@@ -10,7 +10,7 @@
                    name="username"
                    class="form-control"
                    placeholder="username"
-                   dc-on-enter="model.login(model.userInfo)"/>
+                   dc-on-enter="model.register(model.userInfo)"/>
         </div>
 
         <div class="row">
@@ -20,7 +20,7 @@
                    name="email"
                    class="form-control"
                    placeholder="email"
-                   dc-on-enter="model.login(model.userInfo)"/>
+                   dc-on-enter="model.register(model.userInfo)"/>
         </div>
 
         <div class="row">
@@ -29,7 +29,7 @@
                    name="firstName"
                    class="form-control"
                    placeholder="first name"
-                   dc-on-enter="model.login(model.userInfo)"/>
+                   dc-on-enter="model.register(model.userInfo)"/>
         </div>
 
         <div class="row">
@@ -38,7 +38,7 @@
                    name="lastName"
                    class="form-control"
                    placeholder="last name"
-                   dc-on-enter="model.login(model.userInfo)"/>
+                   dc-on-enter="model.register(model.userInfo)"/>
         </div>
 
         <div class="row">
@@ -48,7 +48,7 @@
                    type="password"
                    class="form-control"
                    placeholder="password"
-                   dc-on-enter="model.login(model.userInfo)"/>
+                   dc-on-enter="model.register(model.userInfo)"/>
         </div>
 
         <div class="row">
@@ -58,7 +58,7 @@
                    type="password"
                    class="form-control"
                    placeholder="verify password"
-                   dc-on-enter="model.login(model.userInfo)"/>
+                   dc-on-enter="model.register(model.userInfo)"/>
         </div>
 
         <div class="row">
