--- a/src/public/views/user/templates/profile.view.client.html
+++ b/src/public/views/user/templates/profile.view.client.html
@@ -5,9 +5,12 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <div class="user-info-panel">
-                        <h1>{{model.user.username}}'s Profile</h1>
+                        <h1 class="wrap-text">{{model.user.username}}'s Profile</h1>
                         <div class="profile-picture-container">
                             <img ng-src="{{model.user.proPicUrl}}">
+                        </div>
+                        <div class="name-container">
+                            <h4 class="wrap-text">{{model.user.name}}</h4>
                         </div>
                         <div ng-show="loggedIn" class="user-action-button-panel">
                             <div ng-show="model.myProfile">
