--- a/src/public/views/user/templates/register.view.client.html
+++ b/src/public/views/user/templates/register.view.client.html
@@ -10,6 +10,7 @@
                    name="username"
                    class="form-control"
                    placeholder="username"
+                   maxlength="36"
                    dc-on-enter="model.register(model.userInfo)"/>
         </div>
 
