--- a/src/public/views/user/templates/login.view.client.html
+++ b/src/public/views/user/templates/login.view.client.html
@@ -41,6 +41,8 @@
                role="button">Cancel</a>
         </div>
 
+        <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+        
     </div>
 </div>
 <div class="col-sm-3"></div>
