--- a/src/public/views/user/templates/login.view.client.html
+++ b/src/public/views/user/templates/login.view.client.html
@@ -36,13 +36,20 @@
         </div>
 
         <div class="row">
+            <a href="/auth/facebook" class="btn btn-half pull-left btn-blue">
+                <span class="fa fa-facebook"></span> Facebook
+            </a>
+            <a href="/auth/google" class="btn btn-half pull-right btn-danger">
+                <span class="fa fa-google-plus"></span> Google
+            </a>
+        </div>
+
+        <div class="row">
             <a class="btn btn-block btn-default"
                ng-click="model.returnToPreviousPage()"
                role="button">Cancel</a>
         </div>
 
-        <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-        
     </div>
 </div>
 <div class="col-sm-3"></div>
