--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -26,6 +26,10 @@
     margin: 7px 5px;
 }
 
+.outer-row {
+    margin: 7px 5px;
+}
+
 .dropdown-tab-label {
     float: none;
     display: inline-block;
