Added an edit profile page, showed current values on settings page,  refactored some stuff.

--- a/src/public/views/user/templates/profile.view.client.html
+++ b/src/public/views/user/templates/profile.view.client.html
@@ -14,7 +14,7 @@
                         </div>
                         <div ng-show="loggedIn" class="user-action-button-panel">
                             <div ng-show="model.myProfile">
-                                <button class="btn btn-info">Edit</button>
+                                <a class="btn btn-info" href="#!/editProfile">Edit</a>
                             </div>
                             <div ng-hide="model.myProfile">
                                 <button hover-change
