--- a/src/public/views/user/templates/settings.view.client.html
+++ b/src/public/views/user/templates/settings.view.client.html
@@ -28,6 +28,7 @@
                            name="newUsername"
                            class="form-control"
                            placeholder="username"
+                           maxlength="26"
                            dc-on-enter="model.updateUsername(model.unPassword, model.newUsername)"/>
                 </div>
             </div>
