--- a/src/public/views/user/templates/profile.view.client.html
+++ b/src/public/views/user/templates/profile.view.client.html
@@ -117,18 +117,26 @@
                             </div>
                         </div>
                         <div class="tab-pane fade" id="followers">
-                            <div class="container-fluid">
+                            <div class="profile-tab-container container-fluid">
                                 <h4>Followers</h4>
                                 <div ng-repeat="user in model.followers">
-                                    <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                                    <div class="profile-tab-display-object">
+                                        <img ng-src={{user.proPicUrl}} width="50px" height="50px">
+                                        <div>
+                                            <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="following">
-                            <div class="container-fluid">
+                            <div class="profile-tab-container container-fluid">
                                 <h4>Following</h4>
                                 <div ng-repeat="user in model.usersFollowing">
-                                    <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                                    <div class="profile-tab-display-object">
+                                        <img ng-src={{user.proPicUrl}} width="50px" height="50px">
+                                        <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
