Fixed styling problem between 480 and 768 px on the search results page.

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -313,7 +313,9 @@
     .search-results-container h4 {
         margin-top: 0px;
     }
+}
 
+@media screen and (max-width: 768px) {
     .search-result-publisher-text {
         max-width: 30vw;
     }
