--- a/src/public/views/admin/templates/adminPanel.view.client.html
+++ b/src/public/views/admin/templates/adminPanel.view.client.html
@@ -1,18 +1,18 @@
-<div class="col-sm-1"></div>
-<div class="col-sm-10 content-panel">
+<div class="col-sm-3"></div>
+<div class="col-sm-6 content-panel">
     <div class="container-fluid">
         <h1>Admin Panel</h1>
-        <div class="">
-            <div ng-repeat="user in model.users">
-                <div class="pull left">
-                    <a href="#!/profile/{{user.username}}">{{user.username}}</a>
-                </div>
-                <div class="pull right">
-                    <a href="#!/admin/edit/{{user.username}}">Edit</a>
-                    <a ng-click="model.deleteUser(user)">Delete</a>
-                </div>
+        <div ng-repeat="user in model.users" class="admin-user-list-row">
+            <div class="row">
+                <span class="pull-left">
+                        <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                    </span>
+                <span class="pull-right">
+                        <a href="#!/admin/edit/{{user.username}}">Edit</a>
+                        <a ng-click="model.deleteUser(user)">Delete</a>
+                </span>
             </div>
         </div>
     </div>
 </div>
-<div class="col-sm-1"></div>
+<div class="col-sm-3"></div>
