--- a/src/public/views/user/templates/register.view.client.html
+++ b/src/public/views/user/templates/register.view.client.html
@@ -69,6 +69,15 @@
         </div>
 
         <div class="row">
+            <a href="/auth/facebook" class="btn btn-half pull-left btn-blue">
+                <span class="fa fa-facebook"></span> Facebook
+            </a>
+            <a href="/auth/google" class="btn btn-half pull-right btn-danger">
+                <span class="fa fa-google-plus"></span> Google
+            </a>
+        </div>
+
+        <div class="row">
             <a class="btn btn-block btn-primary"
                role="button"
                href="#!/login"
