--- a/src/public/views/homepage/templates/homepage.view.client.html
+++ b/src/public/views/homepage/templates/homepage.view.client.html
@@ -10,6 +10,9 @@
         </div>
         <div class="user-activity-panel border-top-white clearfix">
             <h3>Activity Feed</h3>
+            <div ng-show="model.activities.length === 0">
+                <h4>No activity to show here...</h4>
+            </div>
             <div class="activity-box-container" ng-repeat="activity in model.activities">
                 <div class="panel panel-warning activity-box">
                     <div class="panel-heading">
